--- a/wp-content/themes/understrap-child/sass/child-theme.scss
+++ b/wp-content/themes/understrap-child/sass/child-theme.scss
@@ -58,6 +58,8 @@
 @import "theme/partials/marketing_styles";
 @import "theme/partials/perspective";
 @import "theme/partials/agile";
+@import "theme/partials/a-la-carte_styles";
+@import "theme/partials/capabilities-overlay_styles";
 @import "theme/partials/beliefs";
 @import "theme/partials/services_intro";
 @import "theme/partials/focus";
@@ -85,5 +87,5 @@
 // @import "theme/partials/menu_styles";
 
 
-
+@import "theme/partials/scratch_styles";
 
