--- a/wp-content/themes/understrap-child/sass/theme/partials/_layout_styles.scss
+++ b/wp-content/themes/understrap-child/sass/theme/partials/_layout_styles.scss
@@ -1643,477 +1643,8 @@ svg#services__arrow--img {
 
 ///
 
-// ==========================================================================
-// capabilities
-// ==========================================================================
+// 
 
-.content__wrapper.skills, .content__wrapper.services__intro {
-  margin-top: 0;
-}
-
-.my-capabilities {
-//   padding-top: 4rem;
-
-  // h1 {
-  //   flex: 0 0 auto;
-  //   margin-top: auto;
-  // }
-
-  // h2 {
-  //   flex: 0 0 auto;
-  // }
-
-  // h3 {
-  //   flex: 0 0 auto;
-  // }
-
-  // h4 {
-  //   flex: 0 0 auto;
-
-  //   /*      @extend %display-text-lg;
-  // }
-
-  // /*         @extend %display-text-lg;  */
-
-  // p {
-  //   flex: 0 0 auto;
-  //   margin-bottom: auto;
-  // }
-}
-
-
-
-@include mq("tablet-wide") {
-  .container.my-capabilities {
-    width: 100%;
-    max-width: 100%;
-  }
-}
-
-
-.my-capabilities__main-page {
-  position: relative;
-}
-
-.my-capabilities__container__skills {
-  position: relative;
-  overflow: hidden;
-}
-
-.my-capabilities__main-page_wrapper {
-  position: relative;
-  width: 100%;
-
-  @include vr($padding: 3 4 0 4);
-@include mq('tablet-wide'){
-  @include vr($padding: 2 3 0 3);
-}
-}
-
-.my-capabilities__panel-head {
-  @include mq("tablet-wide") {
-    @include vr($margin: 6 auto 2 auto, $width: 42);
-
-    text-align: center;
-  }
-}
-
-.capabilities__main-page_menu {
-  @include vr($margin-top: 4);
-  @include mq("tablet-wide") {
-    @include vr($width: 100%, $padding: 0, $margin-top: 2);
-
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-    // background: $off-white;
-    align-items: stretch;
-    // border-radius: 2em 2em 0 0;
-//     margin-top: -20em;
-    margin-left: auto;
-    margin-right: auto;
-    // border: thin solid $gray-300;
-  }
-  @include mq("desktop"){
-    width: 83%;
-    max-width: 83%;
-  }
-  @include mq("desktop-hd"){}
-  @include mq("desktop-uhd"){}
-}
-
-.capabilities__menu_item {
-  display: flex;
-  flex-direction: column;
-  cursor: pointer;
-  width: 100%;
-  max-width: 100%;
-  justify-content: center;
-  align-items: stretch;
-  align-items: center;
-
-  @include vr($margin: 3 0);
-  @include mq("tablet") {
-    flex-direction: row;
-    justify-content: center;
-    border: $white solid .25em;
-  }
-
-
-  @include mq("tablet-wide") {
-    @include make-col-ready;
-    @include make-col(6);
-
-    padding-left: 0px;
-    padding-right: 0px;
-  }
-}
-
-// .link {
-//   @include vr($margin-bottom: 0);
-// }
-
-#mobile-icon {
-  @include vr($padding: 0.5);
-}
-
-#gears-icon {
-  @include vr($padding: 1);
-}
-
-.capabilities__menu_icon {
-  @include make-col-ready;
-  @include make-col(3);
-  margin-top: 2em;
-  @include mq("tablet-wide") {
-    margin-top: -8em;
-  }
-}
-
-.capabilities__menu_icon, .capabilities__menu_icon .cls-2, .capabilities__menu_icon .cls-1 {
-  // width: 50%;
-}
-
-.capabilities__menu_item--content {
-  @include cols;
-  @include make-col-ready;
-  @include make-col(9);
-
-  justify-content: flex-start;
-  text-align: center;
-
-  @include mq("tablet") {
-    text-align: left;
-    width: 41%;
-    max-width: 41%;
-
-    @include vr($padding-top: 3, $padding-bottom: 3);
-  
-
-
-  @include vr($padding-left: 1);
-  
-  }
-  @include mq("tablet-wide") {
-    width: 55%;
-    max-width: 55%;
-  }
-}
-
-.capabilities__menu-content_header {
-  font-weight: 400;
-  @include vr($margin-bottom: 1);
-}
-
-#capabilities__menu_link {
-  position: relative;
-  bottom: unset;
-  flex: 0 0 auto;
-
-  @include vr($margin-top: 1);
-}
-
-// ==========================================================================
-// capabilities overlay
-// ==========================================================================
-
-.capabilities__overlay {
-  height: 100vh;
-  left: 0;
-  overflow-y: scroll;
-  position: fixed;
-  top: 0;
-  visibility: hidden;
-  width: 100%;
-  max-width: 100%;
-  z-index: 1001;
-  display: flex;
-  flex-direction: column;
-
-  hr {
-    width: 100%;
-  }
-}
-
-.overlay__container {
-  display: flex;
-  flex-direction: row;
-  flex-wrap: wrap;
-  justify-content: center;
-  align-items: baseline;
-  @include vr($padding: 1);
-  @include mq("tablet"){
-  padding: 0;
-  align-items: inherit;
-  }
-}
-
-.capabilities__overlay--webdev {
-  margin-bottom: 3rem;
-  flex: 1;
-}
-
-
-.overlay-intro{
-  display: flex;
-  flex-direction: column;
-  flex: 0 0 auto;
-  @include vr($margin-top: 4);
-  padding: 8.5%;
-  // width: 83%;
-  // max-width: 83%;
-    width: 100%;
-  max-width: 100%;
-  @include mq("tablet") {
-    // max-width: 61%;
-    // width: 61%;
-     max-width: 83%;
-    width: 83%;
-    padding: 8%;
-    // width: 100%;
-    // max-width: 100%;
-  }
-  @include mq("desktop"){
-    max-width: 61%;
-    width: 61%;
-  }
-    @include mq("desktop-hd"){
-    max-width: 50%;
-    width: 50%;
-  }
-}
-
-
-
-.overlay__content {
-  @include vr($margin: 2 0 2 0);
-  width: 100%;
-  max-width: 100%;
-  @include vr($padding-left: 1, $padding-right: 1);
-  display: flex;
-  flex-direction: column;
-  flex-wrap: wrap;
-  align-items: baseline;
-
-  @include mq("tablet") {
-    @include vr($margin-top: 3, $margin-bottom: 3);
-  width: 61%;
-  max-width: 61%;
-  padding: 8%;
-  }
-  @include mq("desktop"){
-    max-width: 61%;
-    width: 61%;
-  }
-    @include mq("desktop-hd"){
-    max-width: 50%;
-    width: 50%;
-  }
-}
-
-
-
-.overlay__content.overlay__content--webdev-capabilities{
-flex-direction: row;
-min-height: 1px;
-height: unset;
-margin-top: 4em;
-margin-bottom: 4em;
-position: relative;
-width: 81%;
-flex: 0 0 auto;
-justify-content: center;
-  @include mq("desktop"){
-    max-width: 61%;
-    width: 61%;
-  }
-    @include mq("desktop-hd"){
-    max-width: 50.1%;
-    width: 50.1%;
-    margin-right: auto;
-    margin-left: auto;
-  }
-}
-
-
-.overlay__content.overlay__content--marketing-strategy{
-}
-// align-items: flex-start;
-// height: 34em;
-// }
-
-.overlay__content--capabilities{
-@include mq("phone, $type:max"){
-  flex: 0 0 95%;
-}
-display: flex;
-flex-direction: column;
-flex-wrap: wrap;
-align-items: center;
-flex: 0 0 auto;
-@include vr($padding: 5 0);
-@include mq("phone-wide"){
-  flex: 0 0 83%;
-  width: 83%;
-    max-width: 83%;
-}
-@include mq("tablet"){
-    flex: 0 0 83%;
-    padding: 0;
-    flex: 0 0 auto;
-    min-height: 40em;
-    height: 40em;
-
-    align-items: flex-start;
-    justify-content: center;
-    position: relative;
-    flex-wrap: wrap;
-    padding: 8%;
-}
-}
-
-.image__container--skills-icon{
-display: flex;
-flex-direction: column;
-align-items: center;
-width: 61%;
-@include mq("tablet"){
-   
-    flex: 1 1 100%;
-    display: flex; 
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    position: relative;
-    width: 12em;
-    max-width: 12em;
-    min-height: 1em;
-    // height: 40em;
-}
-}
-
-
-
-.overlay__content--head {
-width: 81%;
-text-align: center;
-@include mq("tablet"){
-text-align: left;
-   
-    display: flex;
-    max-width: 81%;
-    width: 81%;
-   
-    flex: 0 0 5.5em;
-//     padding-left: 3%;
-    min-height: 5.5em;
-    position: relative;
-}
-// .headline{
-//   min-height: 1.2em;
-//   display: flex;
-//   flex: 0 0 auto;
-// }
-}
-
-.list--capabilities-overlay{
-justify-content: center;
-padding-left: 0;
-max-width: 90%;
-@include mq("tablet"){
-text-align: left;
-justify-content: flex-start;
-   
-    // flex: 0 0 20em;
-    flex: 0 0 0;
-    padding-left: 3%;
-    display: flex;
-    min-height: 7em;
-    max-width: 80%;
-    width: 80%;
-    position: relative;
-}
-
-}
-
-.image__svg-icon--skills{
- width: 38%;
- max-width: 38%;
-
- @include mq("tablet"){
- display: flex;
-// width: 27em;
-// max-width: 27em;
-width: 100%;
-max-width: 100%;
-}
-  }
-.image__svg-icon--webdev-skills{
-    @include make-col-ready();
-    @include make-col(4);
-    @include vr($margin-bottom: 2);
-    fill: $off-white;
-    position: relative;
-    display: flex;
-    min-height: 0;
-}
-
-// .overlay__content ul {
-//   @include make-row;
-
-//   width: 100%;
-//   max-width: 100%;
-
-//   @include rows;
-
-//   flex-wrap: wrap;
-
-//   @include vr($margin-top: 0);
-
-//   /* margin-left: 3rem; */
-
-//   li {
-//     @include make-col-ready;
-
-//     width: 47%;
-//     max-width: 47%;
-//   }
-// }
-
-// #expt-overlay-2, #expt-overlay-3, #expt-overlay-5 {
-//   ul {
-//     list-style: none;
-//     padding-left: 0;
-//     text-indent: 0;
-//     margin-left: 16.6%;
-//   }
-// }
-
-// #expt-overlay-2, #expt-overlay-3, #expt-overlay-5 {
-//   .image__svg-icon--capabilities-overlay {
-//     width: 6rem;
-//   }
-// }
 
 // ==========================================================================
 // commitment__panel_layout
@@ -2241,7 +1772,7 @@ display: flex;
 @include mq("tablet-small") {}
 
 @include mq("tablet") {
-  // .overlay__content ul {
+  // .overlay__flex-item ul {
   //   max-width: 48em;
   //   width: 48em;
 
@@ -4087,6 +3618,10 @@ stroke: $deep-gray;
     max-width: 83.82%;
     height: auto;
     flex: 0 0 auto;
+    @include mq('desktop'){
+        min-height: 23rem;
+        margin-top: 0;
+  }
   }
 
   .objectives-offset {
